--- a/static/index.html
+++ b/static/index.html
@@ -7,14 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drone Control Panel</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body>
+    <button id="streamon">Stream ON</button>
+    <button id="streamoff">Stream OFF</button>
     <button id="takeoff">Takeoff</button>
     <button id="connect">connect</button>
     <button id="land">land</button>
-    <input type="number" name="" id="sensitivity" value="50">
+    <input type="number" name="" id="sensitivity" value="50" max="500" min="20">
+    <input type="number" name="" id="rotation" value="360" max="360" min="1">
+
+
+
 
 
     <div class="parent">
@@ -23,12 +29,135 @@
         <div class="div3"><button id="back">&#129147;</button></div>
         <div class="div4"><button id="right">&#129146;</button> </div>
         <div class="div5"><button id="up">&#129145;</button></div>
-        <div class="div6"><button id="down">&#129147;</button></div>
+
+        <div class="div6"><button id="rotateLeft">&#129144;</button> </div>
+        <div class="div7"><button id="down">&#129147;</button></div>
+        <div class="div8"><button id="rotateRight">&#129146;</button></div>
     </div>
 
     <p id="status">disconnected</p>
+    <canvas id="video-canvas"></canvas>
 </body>
 
 </html>
 
-<script src="script.js"></script>
+
+<script>
+    const canvas = document.getElementById('video-canvas');
+    const url = 'ws://127.0.0.1:3001/stream';
+    let player = new JSMpeg.Player(url, {canvas: canvas, preserveDrawingBuffer: true});
+    
+    const ctx = canvas.getContext('2d');
+    const screen = document.querySelector('#screen');
+
+</script>
+
+
+<script type="text/javascript" src="jsmpeg.min.js"></script>
+<script>
+const ws = new WebSocket("ws://localhost:8080");
+const status = document.getElementById("status")
+const takeoff = document.getElementById('takeoff');
+const connect = document.getElementById('connect');
+const streamoff = document.getElementById('streamoff');
+const streamon = document.getElementById('streamon');
+const land = document.getElementById('land');
+var sensitivity = document.getElementById('sensitivity').value;
+var rotation = document.getElementById('rotation').value;
+
+
+const forward = document.getElementById('forward');
+const back = document.getElementById('back');
+const left = document.getElementById('left');
+const right = document.getElementById('right');
+
+const up = document.getElementById('up');
+const down = document.getElementById('down');
+const rotateLeft = document.getElementById('rotateLeft');
+const rotateRight = document.getElementById('rotateRight');
+
+const videoStream = document.getElementById('videoStream');
+
+
+ws.addEventListener("open", () => {
+    console.log("connected");
+    status.innerHTML = "connected";
+});
+
+ws.addEventListener("close", () => {
+    console.log("connected");
+    status.innerHTML = "disconnected";
+
+    setTimeout(function(){
+        window.location.reload(1);
+     }, 1000);
+});
+
+ws.addEventListener('message', function (event) {
+    videoStream.src = event.data;
+});
+
+
+
+
+land.addEventListener('click', function () {
+    ws.send('land');
+});
+
+
+
+
+streamoff.addEventListener('click', function () {
+    ws.send('streamoff');
+});
+
+streamon.addEventListener('click', function () {
+    ws.send('streamon');
+});
+
+
+
+
+takeoff.addEventListener('click', function () {
+    ws.send('takeoff');
+});
+
+connect.addEventListener('click', function () {
+    ws.send('command');
+});
+
+
+up.addEventListener('click', function () {
+    ws.send(`up ${sensitivity}`);
+});
+
+down.addEventListener('click', function () {
+    ws.send(`down ${sensitivity}`);
+});
+
+
+
+rotateLeft.addEventListener('click', function () {
+    ws.send(`ccw ${rotation}`);
+});
+
+rotateRight.addEventListener('click', function () {
+    ws.send(`cw ${rotation}`);
+});
+
+forward.addEventListener('click', function () {
+    ws.send(`forward ${sensitivity}`);
+});
+
+back.addEventListener('click', function () {
+    ws.send(`back ${sensitivity}`);
+});
+
+left.addEventListener('click', function () {
+    ws.send(`left ${sensitivity}`);
+});
+
+right.addEventListener('click', function () {
+    ws.send(`right ${sensitivity}`);
+});
+</script>
